--- a/TaskBarAppIdAdjuster/TaskBarAppIdAdjuster.csproj
+++ b/TaskBarAppIdAdjuster/TaskBarAppIdAdjuster.csproj
@@ -77,6 +77,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="NativeConsole.cs" />
+    <Compile Include="NativeWindowHelpers.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
